add_executable(ch2-q1 q1.cpp)
target_link_libraries(ch2-q1 PRIVATE args)

add_executable(ch2-q2 q2.cpp)
target_link_libraries(ch2-q2 PRIVATE args)

add_executable(ch2-q3 q3.cpp)
target_link_libraries(ch2-q3 PRIVATE args)

add_executable(ch2-q4 q4.cpp)
target_link_libraries(ch2-q4 PRIVATE args)

add_executable(ch2-q5 q5.cpp)
target_link_libraries(ch2-q5 PRIVATE args)

add_executable(ch2-q6 q6.cpp)
target_link_libraries(ch2-q6 PRIVATE args)

add_executable(ch2-q7 q7.cpp)
add_executable(ch2-q8 q8.cpp)
